--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="wrapper">
       <section id="content">
         <h2>hey</h2>
         <p>
