--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       </nav>
     </header>
 
-    <main class="wrapper">
-      <section id="content">
+    <main>
+      <section id="content" class+"wrapper">
         <h2>hey</h2>
         <p>
           Inside getStreamedHtmlResponse we construct a new ReadableStream that
