--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-      <section id="content" class+"wrapper">
+      <section id="content" class="wrapper">
         <h2>hey</h2>
         <p>
           Inside getStreamedHtmlResponse we construct a new ReadableStream that
